--- a/app/views/admin/badges/_form.html.erb
+++ b/app/views/admin/badges/_form.html.erb
@@ -9,7 +9,6 @@
     <br><br>
   </div>
   <div class="field">
-    <%= f.submit %> | 
-    <%= link_to 'Cancel', admin_badges_path %>
+    <%= f.submit class: 'btn btn-success' %>
   </div>
 <% end %>
