--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -55,6 +55,8 @@
               <li><%= link_to "Sign Out", destroy_admin_session_path, method: :delete  %></li>
               <li><%= link_to "Workshops", admin_workshops_path  %></li>
               <li><%= link_to "Category", admin_categories_path  %></li>
+              <li><%= link_to "Badges", admin_badges_path %></li>
+              <li><%= link_to "Users", admin_users_path %></li>
 
               <% else %>
               <li><%= link_to "Sign In", new_admin_session_path  %></li>
