--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -21,6 +21,8 @@
           <li><%= link_to "Admin - Sign Out", destroy_admin_session_path, method: :delete  %></li>
           <li><%= link_to "Workshops", admin_workshops_path, class: "ico services" %></li>
           <li><%= link_to "Category", admin_categories_path, class: "ico typography" %></li>
+          <li><%= link_to "Badges", admin_badges_path, class: "ico gallery" %></li>
+          <li><%= link_to "Users", admin_users_path, class: "ico typography" %></li>
         <% else %>
           <li><%# link_to "Admin - Sign In", new_admin_session_path  %></li>
         <% end %>
