--- a/app/views/admin/users/give_badges.html.erb
+++ b/app/views/admin/users/give_badges.html.erb
@@ -13,17 +13,15 @@
       </td>
       <td>
         <%#= form_for(:userbadges, url: save_badges_admin_user_path) do |f| %>
+          <%= form_for(:userbadges, url: save_badges_admin_user_path) do |f| %>
+            
+            <% @badges.each do |badge| %>
+              <%= check_box_tag "badge[]", badge.id %>
+               <%= image_tag badge.picture.thumb.url %> 
 
-          <% @badges.each do |badge| %>
-            <%= form_for(:userbadges, url: save_badges_admin_user_path, html: {id: "form_#{badge.id}"}) do |f| %>
-              <%= link_to "#{image_tag(badge.picture.thumb.url)}".html_safe, "#", class: "badge_id_#{badge.id}" %> 
-              <%= f.hidden_field :badge_id, value: "#{badge.id}" %>
-              <script>
-                $( ".badge_id_<%= badge.id %>" ).click(function() {
-                  $( "#form_<%= badge.id %>" ).submit();
-                });
-              </script>
-            <% end %>
+              <% end %>
+
+            <%= submit_tag "Submit" %>
           <% end %>
 
           <%#= f.select(:badge, @badges.collect{|badge| [badge.name] }, { multiple: true, size: 5}) %>
