--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,23 +1,21 @@
-<h2>Sign up</h2>
+
+<fieldset>
+  <legend>Sign Up</legend>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, :autofocus => true %></div>
+  <%= f.text_field :name, :autofocus => true, placeholder: "Name" %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <%= f.email_field :email, placeholder: "Email" %>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <%= f.password_field :password, placeholder: "Password" %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <%= f.password_field :password_confirmation, placeholder: "Password confirmation" %>
 
-  <%= button_tag(type: 'submit') do %>
+   <%= button_tag(type: 'submit') do %>
     Sign Up
   <% end %>
 <% end %>
-
+</fieldset>
 <%= render "users/shared/links" %>
