--- a/app/views/admin/users/take_badges.html.erb
+++ b/app/views/admin/users/take_badges.html.erb
@@ -1,4 +1,4 @@
-<h1>Give Badge</h1>
+<h1>Take Badge</h1>
 <hr>
 <table class="table table-bordered">
   <thead>
@@ -12,7 +12,7 @@
         <b><%= @user.name %></b>
       </td>
       <td>
-        <%= form_for(:userbadges, url: save_badges_admin_user_path) do |f| %>
+        <%= form_for(:userbadges, url: destroy_badges_admin_user_path) do |f| %>
           
           <% @badges.each do |badge| %>
             <%= check_box_tag "badge[]", badge.id %>
