--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,10 @@
 <fieldset>
 <%= form_for @user, html: {:multipart => true} do |f| %>
-  <%= f.text_field :name %>
-  <%= f.file_field :avatar %>
+  <%= f.label :name %> <%= f.text_field :name %>
+  <%= f.label :avatar %> <%= f.file_field :avatar %>
+  <%= f.label :current_password %> <%= f.password_field :current_password, :autocomplete => "off" %>
+  <%= f.label :password %> <%= f.password_field :password, :autocomplete => "off" %>
+  <%= f.label :password_confirmation %> <%= f.password_field :password_confirmation %>
   <%= button_tag(type: 'submit', class: 'half') do %>
     Update Profile
   <% end %>
