--- a/app/views/workshops/search.html.erb
+++ b/app/views/workshops/search.html.erb
@@ -1,7 +1,7 @@
 
 
 <fieldset class="text-center">
-<legend align="center">Top 3 Contributor</legend>
+<legend align="center">Search Results </legend>
 <table class="table ">
     <% @workshops.each do |workshop| %>
     <tr>
