--- a/app/assets/stylesheets/user/main.css
+++ b/app/assets/stylesheets/user/main.css
@@ -256,6 +256,21 @@ header {
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 	margin: 0;
 }
+
+footer{
+
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	background-color: #BB2222;
+	border-bottom: 4px solid rgba(0, 0, 0, 0.2);
+	position: relative;
+	z-index: 0;
+	text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+
+}
 header  h1 {
 	color: #FFF;
 	display: inline;
