--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
   				<p>
   					Member since: <strong><%= @user.created_at.strftime("%d-%b-%Y") %></strong>
             </br>
-            Last active : <strong><%= distance_of_time_in_words(Time.now - @user.last_sign_in_at.to_time) %> ago</strong>
+            Last sign in : <strong><%= distance_of_time_in_words(Time.now - @user.last_sign_in_at.to_time) %> ago</strong>
   				</p>
   			</td>
   		</tr>
@@ -20,7 +20,10 @@
       <tr>
         <% @user_badges.each_with_index do |badge,index| %>
 
-       <td> <%= image_tag badge.badge.picture.thumb.url, class: "thumbnail" %>
+       <td>
+        <% if !badge.badge.blank? %>          
+            <%= image_tag badge.badge.picture.thumb.url, class: "thumbnail"  %>
+        <% end %>
        </td>
         <% end %>
         
