--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -1,5 +1,5 @@
 <% unless @workshops.blank? %>
-  <h1>Listing workshops</h1>
+  <h1>Listing Contributions</h1>
 
   <table class="table">
     <thead>
@@ -16,7 +16,13 @@
         <tr>
           <td><%= link_to workshop.name, workshop %></td>
           <td><%= workshop.category.name %></td>
-          <td><span class="label label-success"><%= workshop.status %></span></td>
+          <td>
+          <% if workshop.status %>
+            <span class="label label-success">Active</span>
+            <% else %>
+            <span class="label label-danger">Inactive</span>
+          <% end %>
+          </td>
           <td>
           <%= link_to 'Edit', edit_workshop_path(workshop), 'data-no-turbolink' => true %>
           </td>
